mem_dbg/tests/snapshots/test_all_types_mem_dbg_insta__default_depth_0@x86_64.snap
---
source: mem_dbg/tests/test_all_types_mem_dbg_insta.rs
expression: depth_output
---
64_215 B 100.00% ⏺: test_all_types_mem_dbg_insta::all_types_helper::AllTypesStruct
